[UPDATE] 初步实现Seeker的功能，支持前端语法的搜索，版本暂时定为3.0.0-gamma